# ragit

./: .env.example  .gitignore  CHANGELOG.md  README.md  contributing.md  demo_highway_rag.py  demo_ragit.py  demo_real_usecase.py  demo_simple.py  pyproject.toml
demos/: build-falcon-app-example.py  custom_provider_example.py  falcon-tutorial.rst
docs/: changelog.rst  index.rst  installation.rst  quickstart.rst
docs/api/: assistant.rst  providers.rst
ragit/: __init__.py  assistant.py  config.py  exceptions.py  loaders.py  logging.py  monitor.py  version.py
ragit/core/: __init__.py
ragit/core/experiment/: __init__.py  experiment.py  results.py
ragit/providers/: __init__.py  base.py  function_adapter.py  ollama.py  sentence_transformers.py
ragit/utils/: __init__.py
tests/: conftest.py
tests/integration/: test_highway_rag.py
tests/unit/: test_assistant.py  test_config.py  test_experiment.py  test_function_adapter.py  test_loaders.py  test_providers_base.py  test_providers_ollama.py  test_results.py  test_sentence_transformers.py
